<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_memo"
        android:title="@string/main_activity_menu"
        android:icon="@drawable/ic_view_list_black_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/btn_save"
        android:orderInCategory="100"
        android:title="@string/menu_save"
        android:icon="@drawable/ic_save_black_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/btn_clear"
        android:orderInCategory="100"
        android:title="@string/menu_clear"
        android:icon="@drawable/ic_clear_black_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never" />
</menu>
