<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_close"
        android:title="@string/menu_close"
        android:icon="@drawable/ic_arrow_back_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_save_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_clear"
        android:title="@string/menu_clear"
        android:icon="@drawable/ic_clear_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="always"/>
</menu>